--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Install Dependencies
+        run: pip install google-generativeai requests
+
       - name: Fetch Pull Request Changes
         run: |
           git fetch origin main
@@ -19,5 +22,6 @@ jobs:
 
       - name: Run AI Code Review
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python .github/scripts/review_code.py
