--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -24,4 +24,4 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python .github/scripts/review_code.py
+        run: python scripts/review_code.py
