--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -9,19 +9,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: pip install google-generativeai requests
-
-      - name: Fetch Pull Request Changes
-        run: |
-          git fetch origin main
-          git diff origin/main > changes.diff
-
-      - name: Run AI Code Review
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python scripts/review_code.py
+      - name: listing all files
+        run: ls -al
+#
+#      - name: Install Dependencies
+#        run: pip install google-generativeai requests
+#
+#      - name: Fetch Pull Request Changes
+#        run: |
+#          git fetch origin main
+#          git diff origin/main > changes.diff
+#
+#      - name: Run AI Code Review
+#        env:
+#          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        run: python scripts/review_code.py
