--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -25,4 +25,4 @@ jobs:
         env:
           GOOGLE_API_KEY: "AIzaSyCG_xdy6Ye0tuYAG4T3r4V5tK6vTWsZ6ms"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python3 /home/runner/work/code-reviewer/code-reviewer/scripts/review_code.py "/home/runner/work/code-reviewer/code-reviewer/test_folder/example.py"
+        run: python .github/scripts/review_code.py "test_folder/example.py"
