--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -3,7 +3,11 @@ name: AI Code Review
 on:
   pull_request:
     types: [opened, synchronize]
-
+    
+permissions:
+  pull-requests: write
+  contents: read
+  
 jobs:
   review_code:
     runs-on: ubuntu-latest
