update code review yaml 2 - 27 feb

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run AI Code Review
         env:
-          GOOGLE_API_KEY: "${{ secrets.GOOGLE_API_KEY }}"
+          GOOGLE_API_KEY: "AIzaSyCG_xdy6Ye0tuYAG4T3r4V5tK6vTWsZ6ms"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python .github/scripts/review_code.py
 
