--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Comment on PR
         run: |
           COMMENTS=$(cat ai_review_comments.json)
-          echo "Comments: $COMMENTS"
+          
 
           if [ "$COMMENTS" != "[]" ]; then
             PR_NUMBER=${{ github.event.pull_request.number }}
@@ -51,11 +51,11 @@ jobs:
               # Find the correct position in the diff
               POSITION=$(echo "$DIFF" | jq --arg FILE "$FILE" --argjson LINE "$LINE" '
                 .[] | select(.filename == $FILE) | .patch |
-                capture("@@ -\\d+,\\d+ \\+\\d+,\\d+ @@") |
-                .["+"] | tonumber + ($LINE - 1)
+                capture("@@ -\\d+,\\d+ \\+(?<start>\\d+),\\d+ @@") |
+                .start | tonumber + ($LINE - 1) // empty
               ')
 
-              if [ -z "$POSITION" ]; then
+              if [ -z "$POSITION" ] || [ "$POSITION" == "null" ]; then
                 echo "⚠️ Could not determine position for $FILE (line $LINE). Skipping."
                 continue
               fi
