--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -61,6 +61,6 @@ jobs:
               curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
                    -H "Accept: application/vnd.github.v3+json" \
                    "https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER}/comments" \
-                   -d "{\"body\": \"$TEXT\", \"commit_id\": \"$COMMIT_ID\", \"path\": \"$FILE\", \"line\": $LINE, \"side\": \"RIGHT\"}"
+                   -d "{\"body\": \"$COMMENT_TEXT\", \"commit_id\": \"$COMMIT_ID\", \"path\": \"$FILE\", \"line\": $LINE, \"side\": \"RIGHT\"}"
             done <<< "$(echo $COMMENTS | jq -c '.[]')"
           fi
